# twai_mlops_assignment2

./: .gitignore  README.md  pyproject.toml
data/: day_2011.csv  day_2012.csv
example/: prediction.py
example/src/ames_housing/: __init__.py
example/src/ames_housing/assets/: ames_housing_data.py  ames_housing_features.py  price_prediction_model.py  train_test.py
example/src/ames_housing/resources/: training_config.py
notebook/: bike-share.ipynb
src/bike_share/: __init__.py  config.py
src/bike_share/assets/: bike_rental_features.py  daily_bike_rental_demand.py  models.py  train_test.py
src/bike_share/resources/: data_loader.py  mlflow_session.py  xgboost_regressor_config.py
src/bike_share/sensors/: data_directory_sensor.py
