[project]
name = "bike-share"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Jan Willem Kleinrouweler", email = "janwillem@appliedai-institute.de" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster-webserver>=1.9.4",
    "dagster>=1.9.4",
    "mlflow>=2.18.0",
    "notebook>=7.3.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
